--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
@@ -30,7 +31,27 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tabler/icons-react": "^3.31.0",
     "@tanstack/react-table": "^8.21.2",
+    "@yoopta/accordion": "^4.9.4",
+    "@yoopta/action-menu-list": "^4.9.4",
+    "@yoopta/blockquote": "^4.9.4",
+    "@yoopta/callout": "^4.9.4",
+    "@yoopta/code": "^4.9.4",
+    "@yoopta/divider": "^4.9.4",
+    "@yoopta/editor": "^4.9.4",
+    "@yoopta/embed": "^4.9.4",
+    "@yoopta/file": "^4.9.4",
+    "@yoopta/headings": "^4.9.4",
+    "@yoopta/image": "^4.9.4",
+    "@yoopta/link": "^4.9.4",
+    "@yoopta/link-tool": "^4.9.4",
+    "@yoopta/lists": "^4.9.4",
+    "@yoopta/marks": "^4.9.4",
+    "@yoopta/paragraph": "^4.9.4",
+    "@yoopta/table": "^4.9.4",
+    "@yoopta/toolbar": "^4.9.4",
+    "@yoopta/video": "^4.9.4",
     "class-variance-authority": "^0.7.1",
+    "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.485.0",
     "next": "15.2.4",
@@ -39,14 +60,19 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "recharts": "^2.15.1",
+    "sass": "^1.86.3",
+    "slate": "^0.102.0",
+    "slate-react": "^0.102.0",
     "sonner": "^2.0.2",
     "tailwind-merge": "^3.0.2",
     "tw-animate-css": "^1.2.5",
+    "use-debounce": "^10.0.4",
     "vaul": "^1.1.2",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
