--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.485.0",
     "next": "15.2.4",
+    "next-cloudinary": "^6.16.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
